src/test/ui/traits/wf-trait-object-only-maybe-bound.stderr
error: `?Trait` is not permitted in trait object types
  --> $DIR/wf-trait-object-only-maybe-bound.rs:3:15
   |
LL | type _0 = dyn ?Sized;
   |               ^^^^^^

error[E0224]: at least one trait is required for an object type
  --> $DIR/wf-trait-object-only-maybe-bound.rs:3:11
   |
LL | type _0 = dyn ?Sized;
   |           ^^^^^^^^^^

error: aborting due to 2 previous errors

